--- a/frontend/.env_example
+++ b/frontend/.env_example
@@ -1,6 +1,6 @@
-VITE_API_KEY=
-VITE_AUTH_DOMAIN=
-VITE_PROJECT_ID=
-VITE_STORAGE_BUCKED=
-VITE_MESSAGING_SENDER_ID=
-VITE_APP_ID=
+VITE_API_KEY="AIzaSyAujmZEJWH0vgqXwDCfdE3DVozqQNKk678"
+VITE_AUTH_DOMAIN="daansetu-3a5f4.firebaseapp.com"
+VITE_PROJECT_ID="daansetu-3a5f4"
+VITE_STORAGE_BUCKED="daansetu-3a5f4.firebasestorage.app"
+VITE_MESSAGING_SENDER_ID="528560233076"
+VITE_APP_ID="1:528560233076:web:a4c7cad0855d38d57ecf21"
