--- a/frontend/.env_example
+++ b/frontend/.env_example
@@ -1,6 +1,6 @@
-VITE_API_KEY=""
-VITE_AUTH_DOMAIN=""
-VITE_PROJECT_ID=""
-VITE_STORAGE_BUCKED=""
-VITE_MESSAGING_SENDER_ID=""
-VITE_APP_ID=""
+VITE_API_KEY=
+VITE_AUTH_DOMAIN=
+VITE_PROJECT_ID=
+VITE_STORAGE_BUCKED=
+VITE_MESSAGING_SENDER_ID=
+VITE_APP_ID=
